--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.11]
+        python-version: [3.8, 3.9, 3.10, 3.11, 3.12, 3.13]
     # 4. 실행 스템 지정
     steps:
     - uses: actions/checkout@v3
