--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,20 +13,31 @@ jobs:
     # 3. 실행 환경 지정
     runs-on: ubuntu-latest
     strategy:
+      # max-parallel: 4는 Github Actions에서 제공하는 기본 파일의 설정
       max-parallel: 4
       matrix:
         python-version: [3.11]
     # 4. 실행 스템 지정
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: create-json
+      id: create-json
+      uses: jsdaniell/create-json@1.1.2
+      with:
+        name: "secrets.json"
+        json: ${{ secrets.SECERT_JSON }}
+
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements_bk.txt
+
     - name: Run Tests
       run: |
         python manage.py test
