--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,15 +42,12 @@ jobs:
       run: |
         python manage.py test
 
-  deploy:
-    runs-on: ubuntu-latest
-    steps: executing remote ssh commands using password
-    uses: biocat/ssh-cation@v1.0.3
-    with:
-      host: ${{ secrets.REMOTE_SSH_HOST }}
-      username: ${{ secrets.REMOTE_SSH_USERNAME }}
-      password: ${{ secrets.REMOTE_SSH_PASSWORD }}
-      port: ${{ secrets.REMOTE_SSH_PORT }}
-      script: |
-        whoami
-        ls -al
+    - name: SSTH ACCESS TETST
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SSH_REMOTE_HOST }}
+        username: ${{ secrets.SSH_REMOTE_USERNAME }}
+        password: ${{ secrets.SSH_REMOTE_PASSWORD }}
+        port: ${{ secrets.SSH_REMOTE_PORT }}
+        scripts: |
+          ls -al
