--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,12 +42,11 @@ jobs:
       run: |
         python manage.py test
 
-    - name: SSTH ACCESS TETST
+    - name: excuting remote ssh commands to deploy
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SSH_REMOTE_HOST }}
         username: ${{ secrets.SSH_REMOTE_USERNAME }}
         password: ${{ secrets.SSH_REMOTE_PASSWORD }}
         port: ${{ secrets.SSH_REMOTE_PORT }}
-        scripts: |
-          ls -al
+        scripts: whoami
