--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,12 +45,13 @@ jobs:
     - name: excuting remote ssh commands to deploy
       uses: appleboy/ssh-action@master
       with:
-#        host: ${{ secrets.SSH_REMOTE_HOST }}
-#        username: ${{ secrets.SSH_REMOTE_USERNAME }}
-#        password: ${{ secrets.SSH_REMOTE_PASSWORD }}
-#        port: ${{ secrets.SSH_REMOTE_PORT }}
-        host: "192.168.0.16"
-        username: "agics-ai"
-        password: "agics12!@"
-        port: 2022
+        host: ${{ secrets.SSH_REMOTE_HOST }}
+        username: ${{ secrets.SSH_REMOTE_USERNAME }}
+        key: ${{ secrets.SSH_REMOTE_SSH_KEY }}
+        password: ${{ secrets.SSH_REMOTE_PASSWORD }}
+        port: ${{ secrets.SSH_REMOTE_PORT }}
+#        host: "192.168.0.16"
+#        username: "agics-ai"
+#        password: "agics12!@"
+#        port: 2022
         scripts: whoami
