--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
         username: ${{ secrets.REMOTE_SSH_USERNAME }}
         key: ${{ secrets.REMOTE_SSH_KEY }}
         port: ${{ secrets.REMOTE_SSH_PORT }}
-        password: ${{ secrets.REMOTE_SSH_PASSWORD }}
+#        password: ${{ secrets.REMOTE_SSH_PASSWORD }}
         scripts: |
           echo ${{ secrets.REMOTE_SSH_HOST }}
           whoami
