--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,4 +50,13 @@ jobs:
         username: ${{ secrets.REMOTE_SSH_USERNAME }}
         key: ${{ secrets.REMOTE_SSH_KEY }}
         debug: true
-        scripts: whoami
+
+        # sudo usermod -aG docker 사용자명 일반 사용자가 도커 권한을 가질 수 있도록 Docker 그룹에 추가
+        scripts: |
+          docker stop biocat_con
+          docker rm biocat_con
+          docker rmi biocat_img
+          cd /home/agics-ai/docker/biocat
+          docker build -t biocat_img /home/agics-ai/docker/biocat/Dockerfile
+          docker run --name biocat_con -d -p 8000:8000 biocat_img
+          
