--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
         debug: true
 
         # sudo usermod -aG docker 사용자명 일반 사용자가 도커 권한을 가질 수 있도록 Docker 그룹에 추가
-        scripts: |
+        run: |
           docker stop biocat_con
           docker rm biocat_con
           docker rmi biocat_img
