--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,7 @@ jobs:
       # sudo usermod -aG docker 사용자명 일반 사용자가 도커 권한을 가질 수 있도록 Docker 그룹에 추가
     - name: Docker build / create container
       run: |
+        docker images
         docker ps -a
 #        echo "docker stop"
 #        docker stop biocat_con
