--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,8 +44,8 @@ jobs:
         key: ${{ secrets.REMOTE_SSH_KEY }}
         script: |
           docker ps -a
-        #  docker stop biocat_con
-        #  docker rm biocat_con
-        #  docker rmi biocat_img
-        #  docker build -t biocat_img /home/agics-ai/docker/biocat/.
-        #  docker run --name biocat_con -d -p 8000:8000 biocat_img
+          docker stop biocat_con
+          docker rm biocat_con
+          docker rmi biocat_img
+          docker build -t biocat_img /home/agics-ai/docker/biocat/.
+          docker run --name biocat_con -d -p 8000:8000 biocat_img
