--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,5 +48,5 @@ jobs:
           docker rm biocat_con
           docker rmi biocat_img
           docker images
-          docker build -t biocat_img /home/agics-ai/docker/biocat/.
+          docker build --no-cache -t biocat_img /home/agics-ai/docker/biocat/.
           docker run --name biocat_con -d -p 8000:8000 biocat_img
